<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="choiceTicketViewModel"
            type="space.chuumong.bookticket.viewmodel.ChoiceTicketViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ticket.ChoiceTicketActivity">

        <Button
            android:id="@+id/btn_one_time_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> choiceTicketViewModel.onClickOneTimeTicket()}"
            android:text="@string/choice_ticket_one_time_ticket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_three_time_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> choiceTicketViewModel.onClickThreeTimeTicket()}"
            android:text="@string/choice_ticket_three_time_ticket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_one_time_ticket" />

        <Button
            android:id="@+id/btn_multiple_time_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> choiceTicketViewModel.onClickMultipleTimeTicket()}"
            android:text="@string/choice_ticket_multiple_time_ticket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_three_time_ticket" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>