<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="timeCourseViewModel"
            type="space.chuumong.bookticket.viewmodel.TimeCourseViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_select_time_and_course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/choice_time_course_select_time_and_course"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/tv_label_select_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{timeCourseViewModel.selectDesc}"
                        android:textSize="12sp"
                        tools:text="GR-E 1회권은 시간대별로 원하는 코스를 선택하여\n1회 탑승 가능한 권종이며, 레이싱은 20분 단위로 진행됩니다." />

                    <FrameLayout
                        android:id="@+id/fl_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        app:layout_collapseMode="pin">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            tools:text="2019년 12월 7일 (토)" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_gravity="bottom"
                            android:background="@android:color/darker_gray" />

                    </FrameLayout>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@{timeCourseViewModel.isSelectTimeCourse ? @dimen/choice_time_course_select_course_rv_margin_bottom : @dimen/choice_time_course_rv_margin_bottom}"
            app:beforeSelectPositionNotifyItemChanged="@{timeCourseViewModel.beforeSelectPosition}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_time_course" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:onClick="@{() -> timeCourseViewModel.onClickPrev()}"
                android:text="@string/prev"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_next"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:onClick="@{() -> timeCourseViewModel.onClickNext()}"
                app:buttonToSelectTimeCourse="@{timeCourseViewModel.isSelectTimeCourse}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="6"
                app:layout_constraintStart_toEndOf="@id/btn_prev" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:visibility="@{timeCourseViewModel.isSelectTimeCourse ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@id/btn_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_label_one_person_pay_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/choice_time_course_one_person_pay_amount"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@id/tv_ticket_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_select_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@id/tv_label_one_person_pay_amount"
                    app:layout_constraintTop_toTopOf="@id/tv_label_one_person_pay_amount"
                    app:textToSelectTicketCount="@{timeCourseViewModel.selectTicketCount}"
                    tools:text="(1매)" />

                <TextView
                    android:id="@+id/tv_ticket_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{timeCourseViewModel.selectTicketPrice}"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_one_person_pay_amount"
                    tools:text="18,000원/1회" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{timeCourseViewModel.totalPrice}"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="18,000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>